# cuda-checkpoint

./: .gitignore  README.md  WRITEUP.md  pyproject.toml
benchmarks/: cuda_graphs_vs_eager_a100.py  vllm_10cycle_stability.py  vllm_a100_portability.py  vllm_cuda_graphs_tp2.py  vllm_error_recovery.py  vllm_l4_single_gpu.py  vllm_multi_gpu_tp2.py  vllm_multi_gpu_tp4.py  vllm_single_gpu.py
deploy/docker-compose/: docker-compose.yaml
deploy/kubernetes/: vllm-checkpoint-sidecar.yaml
src/gpu_checkpoint_orchestrator/: __init__.py  multi_gpu.py
src/gpu_checkpoint_orchestrator_vllm/: __init__.py  cli.py  discovery.py  orchestrator.py
src/vllm_cuda_ckpt/: __init__.py  api.py  cli.py  discover.py
tests/: modal_test_generic.py  test_api.py  test_cuda_ckpt.py  test_discover.py  test_multi_gpu.py  test_vllm.py
